RESOLVED FIXED 258037
evaluateJavaScript: and callAsyncJavaScript: should not leave behind transient activation
https://bugs.webkit.org/show_bug.cgi?id=258037
Summary evaluateJavaScript: and callAsyncJavaScript: should not leave behind transien...
Brady Eidson
Reported 2023-06-13 10:58:20 PDT
evaluateJavaScript: and callAsyncJavaScript: should not leave being transient activation For historical momentum reasons, these APIs act as if operating with a user gesture. And that's fine. But they should not leave behind transient user activation for (currently) 5 seconds after the script completes. Change the behavior (protected with a linked-on-or-after check)
Attachments
Brady Eidson
Comment 1 2023-06-13 10:58:31 PDT
Brady Eidson
Comment 2 2023-06-13 11:03:40 PDT
Brady Eidson
Comment 3 2023-06-14 12:43:04 PDT
Brady Eidson
Comment 4 2023-06-14 12:47:37 PDT
EWS
Comment 5 2023-06-14 15:30:34 PDT
Committed 265168@main (8e5ddea16577): <https://commits.webkit.org/265168@main> Reviewed commits have been landed. Closing PR #14966 and removing active labels.
EWS
Comment 6 2023-06-21 10:19:00 PDT
Committed 259548.840@safari-7615-branch (259842c7afc2): <https://commits.webkit.org/259548.840@safari-7615-branch> Reviewed commits have been landed. Closing PR #659 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.