Source/WebCore/dom/UserGestureIndicator.h
@@ -108,6 +108,8 @@ public:
 
     bool isValidForDocument(const Document&) const;
 
+    void forEachImpactedDocument(Function<void(Document&)>&&);
+
 private:
     UserGestureToken(ProcessingUserGestureState, UserGestureType, Document*, std::optional<UUID> authorizationToken);
 
